--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "@eslym/tunnel",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Something like cloudflare tunnel but using ssh",
   "main": "dist/index.js",
   "keywords": [
-    "ssh", "http", "proxy", "express", "forward", "tunnel"
+    "ssh",
+    "http",
+    "proxy",
+    "express",
+    "forward",
+    "tunnel"
   ],
   "bin": {
     "tunnel-service": "dist/cli.js"
@@ -27,6 +32,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/finalhandler": "^1.1.1",
     "@types/http-proxy": "^1.17.8",
     "@types/ip": "^1.1.0",
     "@types/node": "^16.10.9",
@@ -46,6 +52,7 @@
     "@eslym/logger": "^1.0.0",
     "bcrypt": "^5.0.1",
     "express": "^4.17.3",
+    "finalhandler": "^1.1.2",
     "http-proxy": "^1.18.1",
     "ip": "^1.1.5",
     "is-valid-domain": "^0.1.6",
